# InsightHub

./: .gitignore  GEMINI.md  README.md  delivery_state.json  history.json  index.html  pyproject.toml  requirements.txt  rss.xml  search-index.json  sitemap.xml
.github/workflows/: daily.yml  deploy-pages.yml
assets/: search.js  site.css
configs/: config.example.yaml  config.yaml
docs/: Feishu-docs-API.md  Feishu-docs-block-API.md  Feishu-docs-overview.md  Feishu-wiki-API.md  InsightHub.md  Zhipu-ai-API.md  gh_pages_design.md
output/: InsightHub_2026-02-01_18-39.md  InsightHub_2026-02-01_21-28.md  InsightHub_2026-02-01_21-30.md  InsightHub_2026-02-01_21-31.md
output/manifest/: index.json
output/posts/: 2026-03-02-2ac121969274.md  2026-03-02-48ca8d78d49e.md  2026-03-03-b4469ab493c9.md  2026-03-03-d0432859eea4.md  2026-03-03-f5cb22fefb38.md  2026-03-04-272fed7442d7.md  2026-03-04-3665d89b1e03.md  2026-03-04-55251e98da30.md  2026-03-04-d5fd790a9125.md  2026-03-05-0b5601e6e8bb.md  2026-03-05-878069fc8b56.md  2026-03-06-6145eba42051.md  2026-03-06-a93f30c89669.md  2026-03-07-32fe9f5c43bd.md  2026-03-07-97e52992ed48.md  2026-03-08-859fefec5056.md  2026-03-09-049b1b21d754.md  2026-03-10-cce834e2a093.md  2026-03-11-070cdb5d5bbe.md  2026-03-12-dd6e6c6dffeb.md  2026-03-13-e3916efa33dd.md  2026-03-14-0c6facc5e7d8.md  2026-03-15-13984d86579a.md  2026-03-15-4ea12b748a60.md  (+136 more)
prompts/: classify_template.txt  summarize_prompt.md  summarize_template.md
scripts/: build_site.py  run_workflow.py
tests/: test_agnes_provider.py  test_cli_behavior.py  test_editorial_pipeline.py  test_engine_behavior.py  test_markdown_sink.py  test_observability.py  test_prompt_renderer.py  test_scoring.py  test_settings_security.py  test_site_builder.py  test_workflow_factory.py
(+172 files in other folders)
